--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -3,13 +3,19 @@
   "short_name": "FixMyRoom",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#0d0d0d",
-  "theme_color": "#25d366",
+  "background_color": "#000000",
+  "theme_color": "#1db954",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "img/logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/img/logo.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/img/logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
